fixes and updates